tests/neg/objects/obj-08.ts

/*@ zoo :: ({v:number | true}) => { b: { c: string } } */
function zoo(z){
    var a  = { b : { c: z }, e : "st" };
    return a;
}


